cmake_minimum_required(VERSION 3.17)
project(DesignPattern)

set(CMAKE_CXX_STANDARD 14)

include_directories(01.SimpleFactory/2.Code)
include_directories(02.FactoryMethod/2.Code)
include_directories(03.AbstractFactory/2.Code)
include_directories(04.BuilderPattern/2.Code)
include_directories(05.PrototypePattern/2.Code)
include_directories(06.Singleton/2.Code/Singleton)
include_directories(07.AdapterPattern/2.Code)
include_directories(08.BridgePattern/2.Code)
include_directories(09.CompositePattern/2.Code)
include_directories(10.DecoratorPattern/2.Code)
include_directories(11.FacadePattern/2.Code)
include_directories(12.FlyweightPattern/2.Code)
include_directories(13.ProxyPattern/2.Code)
include_directories(14.ChainOfResponsibility/2.Code)
include_directories(15.CommandPattern/2.Code)
include_directories(16.InterpreterPattern/2.Code)
include_directories(17.IteratorPattern/2.Code)
include_directories(18.MediatorPattern/2.Code)
include_directories(19.MementoPattern/2.Code/MementoPattern/MementoPattern)
include_directories(20.ObserverPattern/2.Code)
include_directories(21.StatePattern/2.Code)
include_directories(22.StrategyPattern/2.Code)
include_directories(23.TemplateMethodPattern/2.Code)
include_directories(24.VisitorPattern/2.Code)

add_executable(SimplyFactory 01.SimpleFactory/2.Code/main.cpp)
add_executable(FactoryMethod 02.FactoryMethod/2.Code/main.cpp)
add_executable(AbstractFactory 03.AbstractFactory/2.Code/main.cpp)

add_executable(BuildPattern 04.BuilderPattern/2.Code/main.cpp)
add_executable(PrototypePattern 05.PrototypePattern/2.Code/main.cpp)
add_executable(Singeleton  06.Singleton/2.Code/Singleton/main.cpp)

#add_executable(        07.AdapterPattern/2.Code/main.cpp)
#add_executable(        08.BridgePattern/2.Code/main.cpp)
#add_executable(        09.CompositePattern/2.Code/main.cpp)
#add_executable(        10.DecoratorPattern/2.Code/main.cpp)
#add_executable(        11.FacadePattern/2.Code/main.cpp)
#add_executable(        12.FlyweightPattern/2.Code/main.cpp)
#add_executable(13.ProxyPattern/2.Code/main.cpp)
#add_executable(        14.ChainOfResponsibility/2.Code/main.cpp)
#add_executable(        15.CommandPattern/2.Code/main.cpp)
#add_executable(        16.InterpreterPattern/2.Code/main.cpp)
#add_executable(   17.IteratorPattern/2.Code/Aggregate.cpp)
#add_executable(IteratorPattern 17.IteratorPattern/2.Code/main.cpp)

